# WMSService

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: dependencies.py  router.py
app/api/v1/endpoints/: containers.py  inventory.py  locations.py  movements.py  reports.py  system.py
app/core/: enums.py  exceptions.py
app/core/schemas/: common.py  container.py  inventory.py  location.py  movement.py  report.py  system.py
app/core/services/: container_service.py  inventory_service.py  label_service.py  location_service.py  movement_service.py  report_service.py  system_service.py
app/infrastructure/database/: connection.py
app/infrastructure/database/queries/: containers.py  inventory.py  locations.py  movements.py  reports.py  system.py
app/infrastructure/database/repositories/: container_repository.py  inventory_repository.py  location_repository.py  movement_repository.py  report_repository.py  system_repository.py
app/middleware/: error_handler.py  logging.py
app/shared/: config.py  constants.py
